# pyagent

./: .gitignore  AGENTS.md  pyproject.toml
.ai/context/: architect-constraint.md  product-constraint.md  release-constraint.md
.ai/reports/: qa-report-20260401.md
.ai/reports/release/: release-guide-20260401.md
.ai/reports/review/: review-report-20260331.md  review-report-20260401.md
.ai/temp/: architect-optimized.md  architect.md  cli-spec.md  package-plan.md  plan.md  test-cases.md  test-result.md  wbs.md
.cliagent/: config.yaml  workflow.yaml
configs/: system.yaml
configs/agents/: outreach-specialist.yaml  sales-assistant.yaml
configs/policies/: high-risk-actions.yaml
configs/providers/: mock.yaml  openai.yaml
configs/skills/: customer-followup.yaml
docs/: cliagent-go-design.md  runtime-constraints.md
src/digital_employee/: __init__.py
src/digital_employee/agents/: assembler.py  loader.py  registry.py
src/digital_employee/bootstrap/: container.py  factories.py
src/digital_employee/contracts/: providers.py  repositories.py
src/digital_employee/domain/: approval.py  artifact.py  employee_profile.py  enums.py  errors.py  events.py  runtime_constraints.py  session.py  task_step.py  tool_call.py  work_order.py
src/digital_employee/memory/: __init__.py  context_compactor.py
src/digital_employee/observability/: ledger.py  projections.py
src/digital_employee/policy/: approvals.py  engine.py  redaction.py
src/digital_employee/providers/: catalog.py  factory.py  mock_provider.py  models.py  router.py
src/digital_employee/runtime/: cell.py  (+7 more)
(+97 files in other folders)
