[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-employee"
version = "0.1.0"
description = "Bootstrap control plane for a Python digital employee platform."
requires-python = ">=3.12"
dependencies = ["pyyaml>=6"]

[project.scripts]
dectl = "digital_employee.api.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
